Update URL for google site search (and properly terminate the XML tags).

--- a/header.html
+++ b/header.html
@@ -10,8 +10,8 @@
    <td style="width:33%;" align="center" valign="top">
     <form method="get" action="http://www.google.com/search">
      <div>
-      <input name="sitesearch" value="autoconf-archive.cryp.to" type=
-      "hidden">Search: <input name="q" maxlength="255" type="text">
+      <input name="sitesearch" value="www.nongnu.org/autoconf-archive/" type="hidden"/>
+      Search: <input name="q" maxlength="255" type="text"/>
      </div>
     </form>
    </td>
